@@ -22,7 +22,6 @@ __revision__ = ""
 from openalea.oalab.applets.texteditor import TextEditor
 from openalea.lpy import Lsystem, AxialTree, registerPlotter
 from openalea.lpy.gui import documentation as doc_lpy
-from openalea.vpltk.qt import QtCore
 
 class LPyApplet(object):
     def __init__(self, session, name="script.lpy", script=""):
